# clientapi-python

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml
.openapi-generator/: FILES
cervinodata_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
cervinodata_api/api/: __init__.py  advertising_data_api.py  analytics_data_api.py  analytics_data_default_metrics_api.py  analytics_data_goals_api.py  analytics_data_product_metrics_api.py  analytics_data_transaction_metrics_api.py  campaign_group_api.py  generic_data_api.py  product_data_api.py
cervinodata_api/apis/: __init__.py
cervinodata_api/models/: __init__.py
docs/: AdvertisingDataApi.md  AnalyticsDataApi.md  AnalyticsDataDefaultMetricsApi.md  AnalyticsDataGoalsApi.md  AnalyticsDataProductMetricsApi.md  AnalyticsDataTransactionMetricsApi.md  CampaignGroupApi.md  GenericDataApi.md  ProductDataApi.md
test/: test_advertising_data_api.py  test_analytics_data_api.py  test_analytics_data_default_metrics_api.py  test_analytics_data_goals_api.py  test_analytics_data_product_metrics_api.py  test_analytics_data_transaction_metrics_api.py  test_campaign_group_api.py  test_generic_data_api.py  test_product_data_api.py
