[tool.poetry]
name = "cervinodata_api"
version = "0.1.0"
description = "Cervinodata API documentation"
authors = ["OpenAPI Generator Community <support@cervinodata.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/cervinodata/python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Cervinodata API documentation"]
include = ["cervinodata_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
